

syntax = "proto3";

package onight.sm;

enum PBModule{
	SSM = 0;
}
enum PBCommand{
	SIN  = 0;
	VLD  = 1;
	OUT = 2;
	GET = 3;//获取session信息
	SET = 4;//设置session的信息
	
	TKN = 10;
	TKC = 11;
}


message PBToken	//token操作
{
	TokenOp op=1;
	string tokenid = 2;
	string userid = 3;
};


message PBSession{
	string smid = 1;
	uint64 loginMS = 2;
	uint64 lastUpdateMS = 3;
	uint32 max_inactive_interval = 4;
	bool validate = 5;
	repeated string kvs_keys = 6;
	repeated string kvs_values = 7;
	map<string,string> kvs = 8;
	string login_id = 10;
	string  res_id = 11;//资源id
	
	
	RetCode	status = 40;//返回码
	repeated PBCommand cmds = 50;
	PBToken token = 60;
	repeated PBToken tokens = 70;
}


message PBSSO	//登入
{
	string user_id = 1;
	string login_id = 2;
	string nickname = 3;
	string email = 4;
	string mobile = 5;
	string third_loginid1 = 6;
	string third_loginid2 = 7;
	string reg_type = 8;
	int32  status = 9;
	string password = 10;
	string trade_password = 11;
	string update_time = 12;
	string create_time = 13;

	string  smid =20;//session的唯一id
	string  res_id = 25;//资源id
	PBSession session = 30;//session信息
};

enum RetCode{
		SUCCESS = 0;//成功
		FAILED = -1;//失败
	}

message PBSSORet{//登入返回

	string	login_id = 1;//登陆的id
	string  smid = 2;//session的唯一id
	string  tokenid =3;//tokenid的唯一id
	
		PBSession session = 30;//session信息
	
	RetCode	status = 40;//返回码
	string 	code = 41;//状态信息
	string 	desc = 42;//描述信息
	
};


enum TokenOp{
		TOKEN_NEW=0;
		TOKEN_CHECK=1;
	};
	

message PBTokenRet	//token操作
{
	TokenOp op=1;
	string tokenid = 2;
	string userid = 3;
	
	RetCode	status = 40;//返回码
	string 	code = 41;//状态信息
	string 	desc = 42;//描述信息
	
};
